--- a/highlights/tpami-tellez2019/index.html
+++ b/highlights/tpami-tellez2019/index.html
@@ -273,7 +273,7 @@ NIC works in two steps. First, gigapixel images are compressed using a neural ne
 <p><img alt="Gigapixel neural image compression" class="img-fluid" src="https://beta.diagnijmegen.nl/images/news/tpami_II.png"/></p>
 <p><a href="https://www.computationalpathologygroup.eu/members/david-tellez/">David Tellez</a> et al compared several encoding strategies, namely reconstruction error minimization, contrastive training and adversarial feature learning, and evaluated NIC on a synthetic task and two public histopathology datasets. They found that NIC can exploit visual cues associated with image-level labels successfully, integrating both global and local visual information. Furthermore, they could visualize the regions of the WSIs where the classifier attended to, and confirmed that they overlapped with annotations from human experts.</p>
 
-            <a href="https://beta.diagnijmegen.nl/highlights" class="mt-5">&larr; Back to overview</a>
+	    <a href="https://beta.diagnijmegen.nl/ Highlights" class="mt-5">&larr; Back to overview</a>
         </div>
     </div>
 
