--- a/highlights/index.html
+++ b/highlights/index.html
@@ -255,7 +255,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Neural Image Compression for Gigapixel Histopathology Image Analysis" src="https://beta.diagnijmegen.nl/images/news/tpami_I-320.png">
+            <img class="img-thumbnail lazyload" alt="Neural Image Compression for Gigapixel Histopathology Image Analysis" src="https://beta.diagnijmegen.nl/images/news/news/tpami_I.png">
         </div>
 
         <div class="col-md-9 article-text">
@@ -274,7 +274,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Best Poster Award MIDL 2019" src="https://beta.diagnijmegen.nl/images/news/Thomas_award-320.jpg">
+            <img class="img-thumbnail lazyload" alt="Best Poster Award MIDL 2019" src="https://beta.diagnijmegen.nl/images/news/news/Thomas_award.jpg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -293,7 +293,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Final meeting AMI-project." src="https://beta.diagnijmegen.nl/images/news/AMI.png">
+            <img class="img-thumbnail lazyload" alt="Final meeting AMI-project." src="https://beta.diagnijmegen.nl/images/news/news/AMI.png">
         </div>
 
         <div class="col-md-9 article-text">
@@ -312,7 +312,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Mitotic counting via deep learning and manual assessment is not prognostic in TNBC." src="https://beta.diagnijmegen.nl/images/news/Detections-320.jpg">
+            <img class="img-thumbnail lazyload" alt="Mitotic counting via deep learning and manual assessment is not prognostic in TNBC." src="https://beta.diagnijmegen.nl/images/news/news/Detections.jpg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -331,7 +331,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Nathan Kaufman timely topics lecture for Jeroen van der Laak at USCAP 2019" src="https://beta.diagnijmegen.nl/images/news/USCAP_1-320.jpg">
+            <img class="img-thumbnail lazyload" alt="Nathan Kaufman timely topics lecture for Jeroen van der Laak at USCAP 2019" src="https://beta.diagnijmegen.nl/images/news/news/USCAP_1.jpg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -350,7 +350,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="JBHI's special issue 'Computational Pathology' now accepting submissions" src="https://beta.diagnijmegen.nl/images/news/Special_issue.jpeg">
+            <img class="img-thumbnail lazyload" alt="JBHI's special issue 'Computational Pathology' now accepting submissions" src="https://beta.diagnijmegen.nl/images/news/news/Special_issue.jpeg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -369,7 +369,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Computer aided quantification of TSR as independent prognosticator in rectal cancer" src="https://beta.diagnijmegen.nl/images/news/TSR.png">
+            <img class="img-thumbnail lazyload" alt="Computer aided quantification of TSR as independent prognosticator in rectal cancer" src="https://beta.diagnijmegen.nl/images/news/news/TSR.png">
         </div>
 
         <div class="col-md-9 article-text">
@@ -388,7 +388,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Kick-off H2020 project ExaMode" src="https://beta.diagnijmegen.nl/images/news/Examode-320.jpg">
+            <img class="img-thumbnail lazyload" alt="Kick-off H2020 project ExaMode" src="https://beta.diagnijmegen.nl/images/news/news/Examode.jpg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -407,7 +407,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="EU H2020 and KWF grant for Francesco Ciompi and Jeroen van der Laak" src="https://beta.diagnijmegen.nl/images/news/KWF_H2020-320.png">
+            <img class="img-thumbnail lazyload" alt="EU H2020 and KWF grant for Francesco Ciompi and Jeroen van der Laak" src="https://beta.diagnijmegen.nl/images/news/news/KWF_H2020.png">
         </div>
 
         <div class="col-md-9 article-text">
@@ -426,7 +426,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Automatic mitosis detection in breast cancer tissue sections" src="https://beta.diagnijmegen.nl/images/news/Tell_Highlight-320.png">
+            <img class="img-thumbnail lazyload" alt="Automatic mitosis detection in breast cancer tissue sections" src="https://beta.diagnijmegen.nl/images/news/news/Tell_Highlight.png">
         </div>
 
         <div class="col-md-9 article-text">
