--- a/highlights/index2.html
+++ b/highlights/index2.html
@@ -255,7 +255,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="First edition MIDL 2018 great success" src="https://beta.diagnijmegen.nl/images/news/news/MIDL_OpenGraph_v3.png">
+            <img class="img-thumbnail lazyload" alt="First edition MIDL 2018 great success" src="https://beta.diagnijmegen.nl/images/news/MIDL_OpenGraph_v3.png">
         </div>
 
         <div class="col-md-9 article-text">
@@ -274,7 +274,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Radboud Science Award 2018 for Jeroen van der Laak and Geert Litjens" src="https://beta.diagnijmegen.nl/images/news/news/RSA_2018.jpg">
+            <img class="img-thumbnail lazyload" alt="Radboud Science Award 2018 for Jeroen van der Laak and Geert Litjens" src="https://beta.diagnijmegen.nl/images/news/RSA_2018-320.jpg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -293,7 +293,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="Results CAMELYON17 challenge" src="https://beta.diagnijmegen.nl/images/news/news/CAMELYON17.png">
+            <img class="img-thumbnail lazyload" alt="Results CAMELYON17 challenge" src="https://beta.diagnijmegen.nl/images/news/CAMELYON17.png">
         </div>
 
         <div class="col-md-9 article-text">
@@ -312,7 +312,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="NOS news article" src="https://beta.diagnijmegen.nl/images/news/news/nos.jpg">
+            <img class="img-thumbnail lazyload" alt="NOS news article" src="https://beta.diagnijmegen.nl/images/news/nos-320.jpg">
         </div>
 
         <div class="col-md-9 article-text">
@@ -331,7 +331,7 @@
     <article class="row article-summary">
 
         <div class="col-md-3 article-image">
-            <img class="img-thumbnail lazyload" alt="CAMELYON16 published in JAMA" src="https://beta.diagnijmegen.nl/images/news/news/1050px-Camelyon.jpg">
+            <img class="img-thumbnail lazyload" alt="CAMELYON16 published in JAMA" src="https://beta.diagnijmegen.nl/images/news/1050px-Camelyon-320.jpg">
         </div>
 
         <div class="col-md-9 article-text">
