--- a/members/ajay-patel/index.html
+++ b/members/ajay-patel/index.html
@@ -258,7 +258,7 @@
             <div class="person">
                 <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Ajay_Patel2-480.jpg">
                 <h1>Ajay Patel</h1>
-                <h2 class="text-muted">PhD student</h2>
+                <h2 class="text-muted">Coordinator RTC Deep Learning</h2>
             </div>
 
             <div class="person-links mb-4">
